<resources>
    <string name="app_name">MySQLiteData</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="main_icon_desc">Main Icon</string>
    <string name="main_header">Simple MySQLite DB manager</string>
    <string name="autor">by Egor Kostan</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_add_record">AddRecord</string>
    <string name="title_activity_delete_record">DeleteRecord</string>
    <string name="first_name">First Name</string>
    <string name="active_contact">Active Contact</string>
    <string name="address">Address</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone #</string>
    <string name="and">AND</string>
    <string name="off">OFF</string>
    <string name="or">OR</string>
    <string name="on">ON</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="title_activity_update_record">UpdateRecord</string>
    <string name="update_record">Update Record</string>
    <string name="add_a_new_record">Add a New Record</string>
    <string name="delete_record">Delete Record</string>
    <string name="main_menu">Main Menu</string>
    <string name="search">Search</string>
    <string name="delet_confirm">Are you sure you want to delete this item ID?</string>
</resources>
