<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_storage_black_24dp"
            android:title="@string/main_menu" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:title="@string/add_a_new_record" />
       <item
            android:id="@+id/nav_remove"
            android:icon="@drawable/ic_remove_circle_outline_black_24dp"
            android:title="@string/delete_record" />

        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/update_record" />
    </group>

    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->

</menu>
